# mcp-mt5

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  config-validator.sh  docker-compose.yml.template  entrypoint.sh  health_check.sh  install_mt5.sh  mt5-instance@.service  mt5_monitor.sh  pyproject.toml  test_deploy.py
.github/workflows/: ci.yml  release.yml
docs/: deployment_and_monitoring.md  docker_deployment.md
docs/superpowers/plans/: 2026-06-20-dockerize-mcp-mt5-hangover.md  2026-06-20-mt5-chart-cleanup-monitoring.md  2026-06-20-mt5-coolify-migration-walkthrough.md  2026-06-20-mt5-coolify-migration.md
docs/superpowers/specs/: 2026-06-20-dockerize-mcp-mt5-hangover-design.md  2026-06-20-mt5-optimization-monitoring-design.md
examples/: tester.ini
mcp_server_code/: CHANGELOG.md  LICENSE  pyproject.toml
mcp_server_code/examples/: claude_desktop_config.json
mcp_server_code/src/mcp_mt5/: __init__.py  ast_refactor.py  formatting.py  install_coolify.py  parsers.py  paths.py  remote_deploy.py  reports.py  server.py
mcp_server_code/tests/: test_paths.py  test_remote_deploy.py
src/mcp_mt5/: __init__.py  analysis.py  lint.py  optimization.py  paths.py  refactor.py  server.py  smoke.py  snapshot.py
tests/: test_analysis.py  test_docker_config_validation.sh  test_lint.py  test_misc.py  test_parsers.py  test_paths.py  test_server_tools.py  test_v04.py
