[project]
name = "mcp-mt5"
version = "0.3.0"
description = "MCP server for MetaTrader 4/5 build pipeline — compile, deploy, backtest, parse reports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PHUICMT", email = "icmtchannel@gmail.com" }]
keywords = ["mcp", "metatrader", "mt5", "mt4", "mql5", "mql4", "trading", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/PHUICMT/mcp-mt5"
Issues = "https://github.com/PHUICMT/mcp-mt5/issues"

[project.scripts]
mcp-mt5 = "mcp_mt5.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_mt5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
